[tool.poetry]
name = "orion"
version = "0.1.0"
description = "A tool to easily migrate Airflow Environments from any Cloud Provider to Astronomer!"
authors = ["fritz-astronomer <fritz@astronomer.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
halo = "^0.0.31"
sh = "^2.0.2"
fs = "^2.4.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.aws.dependencies]
boto3 = "^1.26.81"
boto3-stubs = {extras = ["mwaa", "s3"], version = "^1.26.81"}
fs-s3fs = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B301", "B403"]

[tool.poetry.scripts]
orion = "orion.__main__:migrate"
